# qrgen

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
qr_vcard/: __init__.py  gui.py  qr.py  validation.py  vcard.py
qrgen/: __init__.py  gui.py  i18n.py  payloads.py  qr.py  styles.py  validation.py
tests/: test_download_handlers.py  test_gui.py  test_gui_settings.py  test_i18n.py  test_qr.py  test_qr_header_footer_border.py  test_qr_styles.py  test_styles.py  test_validation.py  test_validation_fields.py  test_vcard.py  test_vcard_fields.py
