[project]
name = "qrgen"
version = "0.3.0"
description = "A simple application that allows a user to generate QR code images."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.47.2",
    "qrcode[pil]>=8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
